02-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx
  labels:
    purpose: demo
spec:
  containers: 
  - name: nginx
    image: nginx
