03-multi-container.yaml
apiVersion: v1
kind: Pod

metadata:
  name: multi-containers
  labels:
    project: roboshop
    purpose: multi-containers-demo
spec: 
  containers:
  - name: nginx
    image: nginx
  - name: almalinux
    image: almalinux:9
    command: ["Sleep", "1000"]
