05-annotations.yaml
apiVersion: v1
kind: Pod

metadata:
  name: labels
  labels:
    project: roboshop
    component: mysql
    tier: backend
    environment: dev
  annotations:
    description: "This pod is created to demonstrate pod annotations"
    jenkins: "https://jenkins.com/build/job/roboshop-catalouge/3"

spec:
  containers:
  - name: nginx
    image: nginx
