06-resources.yaml
apiVersion: v1
kind: Pod

metadata:
  name: resources
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests: # soft limit
        memory: "68Mi"
        cpu: "100m"
      limits: # hard limit
        memory: "128Mi"
        cpu: "150m"
