07-env.yaml
apiVersion: v1
kind: Pod

metadata:
  name: envar-demo
  labels: 
    purpose: demonstrate-envars
spec:
  container:
  - name: nginx
    image: nginx
