09-pod-config.yaml
apiVersion: v1
kind: Pod

metadata:
  name: env-ConfigMap
spec:
  containers:
    - name: nginx
      image: nginx
