12-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    purpose: service-demo

spec:
  selector:
    purpose: service-demo
    project: roboshop
    environment: dev

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    purpose: service-demo
    project: roboshop
    environment: dev

spec:
  containers:
    - name: nginx
      image: nginx
