16-depolyment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx
  # Deployment labels
  labels:
    purpose: deployment-demo
    project: roboshop
    app: nginx

spec:
  replicas: 3

  # These labels are used by ReplicaSet to select Pods.
  # They must match the Pod template labels.
  selector:
    matchLabels:
      purpose: deployment-demo
      project: roboshop
      app: nginx

  # Pod definition
  template:
    metadata:
      labels:
        purpose: deployment-demo
        project: roboshop
        app: nginx

    spec:
      containers:
        - name: nginx
          image: nginx:latest
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    purpose: deployment-demo

spec:
  selector:
    purpose: service-demo
    project: roboshop
    app: nginx

  ports:
    - protocol: TCP
      port: 80 # service port
      targetPort: 80  #container port
