18-lb-pod-depolyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lb
  # Deployment labels
  labels:
    purpose: deployment-lb-demo
    project: roboshop
    app: nginx
spec:
  replicas: 3
  # These labels are used by ReplicaSet to select Pods.
  # They must match the Pod template labels.
  selector:
    matchLabels:
      purpose: deployment-lb-demo
      project: roboshop
      app: nginx
  # Pod definition
  template:
    metadata:
      labels:
        purpose: deployment-lb-demo
        project: roboshop
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
  labels:
    purpose: service-lb-demo
spec:
  type: LoadBalancer
  selector:
    purpose: deployment-lb-demo
    project: roboshop
    app: nginx
  ports:
    - protocol: TCP
      port: 80 # service port
      targetPort: 80 # container port
